- fixed the contact email in the footer - chage the color of the links in the footer to be more visibles

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -301,6 +301,10 @@ header div p {
   flex-direction: column;
 }
 
+.footer-details a {
+  color: white;
+}
+
 .social-network {
   width: 2.5rem;
   background-color: white;
